Table of contents and lecture-0 corrected

--- a/lectures/lecture-0.ipynb
+++ b/lectures/lecture-0.ipynb
@@ -12,10 +12,10 @@
     {
      "data": {
       "text/plain": [
-       "{'scroll': True,\n",
+       "{'theme': 'sky',\n",
+       " 'transition': 'zoom',\n",
        " 'start_slideshow_at': 'selected',\n",
-       " 'theme': 'sky',\n",
-       " 'transition': 'zoom'}"
+       " 'scroll': True}"
       ]
      },
      "execution_count": 1,
@@ -43,7 +43,11 @@
     }
    },
    "source": [
-    "# Uncertainty Quantification, Skoltech,  Spring 2019,  general course information."
+    "# Uncertainty Quantification\n",
+    "\n",
+    "### Skoltech,  Spring 2019\n",
+    "\n",
+    "## General course information."
    ]
   },
   {
@@ -56,9 +60,9 @@
    "source": [
     "## Lecture access\n",
     "\n",
-    "Lectures can be downloaded and viewed on github: https://github.com/oseledets/uq2018\n",
+    "Lectures can be downloaded and viewed on github: https://github.com/G-Ryzhakov/uq2019\n",
     "\n",
-    "They can also be viewed online using *nbviewer*: http://nbviewer.jupyter.org/github/oseledets/uq2018/tree/master/ or *mybinder* https://mybinder.org/v2/gh/oseledets/uq2018/master?filepath=table_of_contents.ipynb .\n",
+    "They can also be viewed online using *nbviewer*: http://nbviewer.jupyter.org/github/G-Ryzhakov/uq2019/tree/master/ or *mybinder* https://mybinder.org/v2/gh/G-Ryzhakov/uq2019/master?filepath=table_of_contents.ipynb .\n",
     "\n",
     "The most comfortable way to navigate through course materials is to use ```table_of_contents.ipynb``` file in repo."
    ]
