--- a/table_of_contents.ipynb
+++ b/table_of_contents.ipynb
@@ -11,11 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Course instructor: **\n",
-    "Ivan Oseledets\n",
+    "**Course instructors: **\n",
+    "Ivan Oseledets, Maxim Panov, Gleb Ryzhakov\n",
     "\n",
-    "** TAs:**\n",
-    "Vitaly Zankin, Gleb Ryzhakov"
+    "** TA:**\n",
+    "Gleb Karpov"
    ]
   },
   {
@@ -24,11 +24,7 @@
    "source": [
     "| Week | Lecture notebooks | Supplementary materials | Homework | Tests |\n",
     "|:------:|:----------|:----------|:----------|-------|\n",
-    "|1| [General info](lectures/lecture-0.ipynb)  <br> [Lecture 1 (Introduction to uncertainty quantification)](lectures/lecture-1.ipynb) <br> [Lecture 2 (UQ propagation using sampling methods)](lectures/lecture-2.ipynb) ||||\n",
-    "|2|[Lecture 3 (UQ propagation: variance reduction and Latin-Hypercube designs)](lectures/lecture-3.ipynb) <br>[Lecture 4 (Polynomial chaos methods)](lectures/lecture-4.ipynb) || [Problem set 1](homeworks/homework_01.ipynb) | |\n",
-    "|3| [Lecture 5 (Stochastic Galerkin Method, Stochastic Collocation Method)](./lectures/lecture-5.ipynb) <br>[Lecture 6 (Priors on function spaces. Gaussian Process regression. The Karhunen–Loève expansion)](./lectures/lecture-6.ipynb)      |  |  | |\n",
-    "|4| [Lecture 7 (Global and local sensitivity analysis, Sobol' indices, PC-based Sobol' indices)](./lectures/lecture-7.ipynb)    || [Problem set 2](homeworks/homework_02.ipynb) || \n",
-    "|5| [Lecture 8 (Inverse problems)](lectures/lecture-8.ipynb), <br> [Lecture 9 (Advanced topics: Markov Chain Monte Carlo methods for UQ. High-dimensional uncertainty quantification.)](lectures/lecture-9.ipynb) |  | | | "
+    "|1| [General info](lectures/lecture-0.ipynb)  <br> [Lecture 1 (Introduction to uncertainty quantification)](lectures/lecture-1.ipynb) <br> [Lecture 2 (UQ propagation using sampling methods)](lectures/lecture-2.ipynb) |||| "
    ]
   }
  ],
