lectures 0 and 1 completed

--- a/lectures/lecture-0.ipynb
+++ b/lectures/lecture-0.ipynb
@@ -233,6 +233,75 @@
     }
    },
    "source": [
+    "## Design of Experiments\n",
+    "### Random design\n",
+    "<div class=\"row\">\n",
+    "  <div class=\"column\">\n",
+    "    <img src='figures/orig_RSM.png' style=\"float: left; width: 40%; margin-right: 1%; margin-bottom: 0.5em;\">\n",
+    "  </div>\n",
+    "  <div class=\"column\">\n",
+    "    <img src='figures/random-appr-RSM.png' style=\"float: left; width: 40%; margin-right: 1%; margin-bottom: 0.5em;\">\n",
+    "  </div>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Design of Experiments\n",
+    "### Optimal design\n",
+    "\n",
+    "<div class=\"row\">\n",
+    "  <div class=\"column\">\n",
+    "    <img src='figures/orig_RSM.png' style=\"float: left; width: 40%; margin-right: 1%; margin-bottom: 0.5em;\">\n",
+    "  </div>\n",
+    "  <div class=\"column\">\n",
+    "    <img src='figures/D-optimal-appr-RSM.png' style=\"float: left; width: 40%; margin-right: 1%; margin-bottom: 0.5em;\">\n",
+    "  </div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Gaussian Process Models\n",
+    "\n",
+    "<img src='figures/gp_1.PNG' style=\"float: left; width: 100%; margin-right: 1%;\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gaussian Process Models\n",
+    "\n",
+    "<img src='figures/gp_2.PNG' style=\"float: left; width: 100%; margin-right: 1%;\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Uncertainty for Neural Networks\n",
+    "\n",
+    "<img src='figures/nn_vs_gp.PNG' style=\"float: left; width: 100%; margin-right: 1%;\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## Materials\n",
     "\n",
     "**Our materials:**\n",
