--- a/table_of_contents.ipynb
+++ b/table_of_contents.ipynb
@@ -11,10 +11,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Course instructors: **\n",
+    "**Course instructors:**\n",
     "Ivan Oseledets, Maxim Panov, Gleb Ryzhakov\n",
     "\n",
-    "** TA:**\n",
+    "**TA:**\n",
     "Gleb Karpov"
    ]
   },
@@ -23,29 +23,30 @@
    "metadata": {},
    "source": [
     "| Week | Lecture notebooks | Supplementary materials | Homework | Tests |\n",
-    "|:------:|:----------|:----------|:----------|-------|\n",
-    "|1| [General info](lectures/lecture-0.ipynb)  <br> [Lecture 1 (Introduction to uncertainty quantification)](lectures/lecture-1.ipynb) <br> [Lecture 2 (UQ propagation using sampling methods)](lectures/lecture-2.ipynb) |||| "
+    "|:----:|:------------------|:------------------------|:---------|-------|\n",
+    "|1|[General info](lectures/lecture-0.ipynb)  <br> [Lecture 1 (Introduction to uncertainty quantification)](lectures/lecture-1.ipynb) <br> [Lecture 2 (UQ propagation using sampling methods)](lectures/lecture-2.ipynb) |&nbsp;| [Homework 1](homeworks/homework_01.ipynb)\n",
+    "|2|[Lecture 3 (Variance reduction method)](lectures/lecture-3.ipynb) ||"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   },
   "nav_menu": {},
   "toc": {
