Lecture 2: error in def. of F^{-1}

--- a/lectures/lecture-2.ipynb
+++ b/lectures/lecture-2.ipynb
@@ -789,7 +789,7 @@
     "$$\n",
     "Here we use the fact, that if a function $f$ is  strictly monotone, then $\\mathbb P(\\mathcal X < x)=\\mathbb P(f(\\mathcal X) < f(x))$.\n",
     "\n",
-    "The statement holds true if $F(x)$ is not strictly monotone and/or discontinuous, in this case then we take by the definition that $F^{-1}(u) = \\min\\{x\\colon F(x)\\leq u\\}$. This definition is correct because CDFs are  monotone and right-continuous.\n",
+    "The statement holds true if $F(x)$ is not strictly monotone and/or discontinuous, in this case then we take by the definition that $F^{-1}(u) = \\min\\{x\\colon F(x)\\leq u\\}$ (<font color=\"red\">Note, there is an error in the previous definition. What is the right formula?</font>). This definition is correct because CDFs are  monotone and right-continuous.\n",
     "\n",
     "$\\color{red}{\\text{Q: Why do all work in this case?}}$\n",
     "\n",
