--- a/table_of_contents.ipynb
+++ b/table_of_contents.ipynb
@@ -25,7 +25,7 @@
     "| Week | Lecture notebooks | Supplementary materials | Homework | Tests |\n",
     "|:----:|:------------------|:------------------------|:---------|-------|\n",
     "|1|[General info](lectures/lecture-0.ipynb)  <br> [Lecture 1 (Introduction to uncertainty quantification)](lectures/lecture-1.ipynb) <br> [Lecture 2 (UQ propagation using sampling methods)](lectures/lecture-2.ipynb) |&nbsp;| [Homework 1](homeworks/homework_01.ipynb)\n",
-    "|2|[Lecture 3 (Variance reduction method)](lectures/lecture-3.ipynb) ||"
+    "|2|[Lecture 3 (Variance reduction method)](lectures/lecture-3.ipynb)<BR>[Lecture 4 (Polynomial Chaos methods)](lectures/lecture-4.ipynb) ||"
    ]
   }
  ],
