Minor typos fixed in Lecture 4

--- a/lectures/lecture-4.ipynb
+++ b/lectures/lecture-4.ipynb
@@ -105,11 +105,11 @@
     "\n",
     "Let $L_2$ be a normed space of functions with the norm\n",
     "$$\n",
-    "\\|f\\|_{L_2}=\\mathbb E\\left(f^2(\\xi)\\right).\n",
+    "\\|f\\|_{L_2}^2=\\mathbb E\\left(f^2(\\xi)\\right).\n",
     "$$\n",
     "For any function $f\\in L_2$ we define its $N^\\text{th}$-degree gPC orthnogonal projection $\\text{Pr}_N$ as\n",
     "$$\n",
-    "\\text{Pr}_N\\,f=\\sum_{i=0}^N\\hat f_kp_k(x),\\qquad\n",
+    "\\text{Pr}_N\\,f=\\sum_{k=0}^N\\hat f_kp_k(x),\\qquad\n",
     "\\hat f_k=\\frac1{\\gamma_k}\\mathbb E\\left(f(\\xi)p_k(\\xi)\\right)\n",
     "$$\n",
     "\n",
@@ -250,7 +250,7 @@
     "Sometimes, only the probability distribution of $f$ is known.\n",
     "We can still build the approximation, but it converges in a weak sense in this case.\n",
     "\n",
-    "_Let $\\eta$ be a random variable with distribution function $F_\\eta(x) = \\mathbb P(\\eta ≤ y)$ and let $\\theta$ be a (standard) random variable in a set of gPC basis functions. A weak gPC approximation is $\\eta_N ∈ \\mathcal P_N(\\theta)$, where $\\mathcal P_N(\\theta)$ is the linear space of polynomials of $\\theta$ of degree up to N ≥ 0, such that $\\eta_N$ converges to $\\theta$ in a weak sense, e.g., in probability._\n",
+    "_Let $\\eta$ be a random variable with distribution function $F_\\eta(x) = \\mathbb P(\\eta ≤ x)$ and let $\\theta$ be a (standard) random variable in a set of gPC basis functions. A weak gPC approximation is $\\eta_N ∈ \\mathcal P_N(\\theta)$, where $\\mathcal P_N(\\theta)$ is the linear space of polynomials of $\\theta$ of degree up to N ≥ 0, such that $\\eta_N$ converges to $\\theta$ in a weak sense, e.g., in probability._\n",
     "\n",
     "The strong approximation implies weak, but not vise versa.\n"
    ]
@@ -336,7 +336,7 @@
     "This is the essence of the following<br>\n",
     "**Theorem.**\n",
     "*Let $\\eta$ be a random variable with CDF $F_\\eta(x)$ and $\\mathbb E[\\eta^2]<\\infty$.\n",
-    "Let $\\theta$ be a random variable with continuous CDF $F_\\theta(x)$ and let $\\mathbb E\\left[\\left|\\eta\\right|^{2m}\\right]<\\infty$ for all $m\\in\\mathbb N_0$.\n",
+    "Let $\\theta$ be a random variable with continuous CDF $F_\\theta(x)$ and let $\\mathbb E\\left[\\left|\\theta\\right|^{2m}\\right]<\\infty$ for all $m\\in\\mathbb N_0$.\n",
     "Let \n",
     "$$\n",
     "\\eta_N=\\sum_{i=0}^Na_kp_k(\\theta)\n",
@@ -543,7 +543,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b562679586bc49d8ab0960172637128c",
+       "model_id": "2b0fde584cca4ade97b377ba278c86fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -644,7 +644,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b2fd65d877f40048f9a6f3fc50a3d8e",
+       "model_id": "fdab2bf3f1b848d1a085449068b9a686",
        "version_major": 2,
        "version_minor": 0
       },
@@ -845,7 +845,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7fc68c49a94b463a84677fe358d17675",
+       "model_id": "39a6176a3f8a4f25a65fe1715c66d391",
        "version_major": 2,
        "version_minor": 0
       },
