Lecture 4: more detail calculation for the gPC coefficients for lognormal r.v.

--- a/lectures/lecture-4.ipynb
+++ b/lectures/lecture-4.ipynb
@@ -218,14 +218,19 @@
     "$$\n",
     "\\hat f_k=\n",
     "\\frac1{\\gamma_k}e^\\mu\n",
-    "\\int_{-\\infty}^{+\\infty}e^{\\sigma x}H_k(x)e^{-x^2/2}\\,dx=\n",
+    "\\int_{-\\infty}^{+\\infty}e^{\\sigma x}H_k(x)e^{-x^2/2}\\,\\text{d}x=\n",
     "%\n",
     "\\frac1{\\gamma_k}e^\\mu e^{\\sigma^2/2}\n",
-    "\\int_{-\\infty}^{+\\infty}H_k(x+\\sigma)e^{-x^2/2}\\,dx=\n",
+    "\\int_{-\\infty}^{+\\infty}H_k(x)e^{-(x-\\sigma)^2/2}\\,\\text{d}x=\n",
+    "%\n",
+    "[x\\to x+\\sigma]=\n",
+    "%\n",
+    "\\frac1{\\gamma_k}e^\\mu e^{\\sigma^2/2}\n",
+    "\\int_{-\\infty}^{+\\infty}H_k(x+\\sigma)e^{-x^2/2}\\,\\text{d}x=\n",
     "$$\n",
     "$$\n",
     "\\frac1{\\gamma_k}e^{\\mu+\\sigma^2/2}\n",
-    "\\int_{-\\infty}^{+\\infty}\\sum_{i=0}^k{k \\choose i}\\sigma^{k-i}H_i(x)e^{-x^2/2}\\,dx=\n",
+    "\\int_{-\\infty}^{+\\infty}\\sum_{i=0}^k{k \\choose i}\\sigma^{k-i}H_i(x)e^{-x^2/2}\\,\\text{d}x=\n",
     "e^{\\mu+\\sigma^2/2}\\frac{\\sigma^k}{k!}.\n",
     "$$\n",
     "\n",
@@ -233,7 +238,57 @@
     "$$\n",
     "\\text{Pr}_N\\eta(\\theta)=\n",
     "\\eta_N(\\theta)=e^{\\mu+\\sigma^2/2}\\sum_{k=0}^N\\frac{\\sigma^k}{k!}H_k(\\theta).\n",
-    "$$\n"
+    "$$ \n",
+    "Below you can find a more detailed conclusion of this relation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Here we use the [Taylor expansion](https://en.wikipedia.org/wiki/Hermite_polynomials#Recursion_relation) of the Hermit polynomial\n",
+    "$$\n",
+    "H_k(x+y)=\n",
+    "\\sum_{i=0}^k{k \\choose i}x^{k-i}H_i(y)\n",
+    "$$\n",
+    "and the orthogonality of the basis\n",
+    "$$\n",
+    "\\int_{-\\infty}^\\infty H_k(x)e^{-x^2/2}\\,\\text{d}x=\n",
+    "\\int_{-\\infty}^\\infty H_0(x) H_k(x)e^{-x^2/2}\\,\\text{d}x=\n",
+    "\\sqrt{2\\pi}\\delta_{0k}.\n",
+    "$$\n",
+    "Recall that\n",
+    "$$\n",
+    "\\gamma_k=\\sqrt{2\\pi}k!.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "In this particular case we can get the expansion faster.\n",
+    "\n",
+    "Recall the [generating_function](https://en.wikipedia.org/wiki/Hermite_polynomials#Generating_function)\n",
+    "for the Hermit polynomials\n",
+    "$$\n",
+    "e^{xt - t^2/2} = \\sum_{n=0}^\\infty H_n(x) \\frac{t^n}{n!},\n",
+    "$$\n",
+    "so\n",
+    "$$\n",
+    "e^{\\mu+\\sigma\\theta}=\n",
+    "e^{\\mu+\\sigma^2/2+\\sigma\\theta-\\sigma^2/2}=\n",
+    "e^{\\mu+\\sigma^2/2}e^{\\sigma\\theta-\\sigma^2/2}=\n",
+    "e^{\\mu+\\sigma^2/2}\\sum_{k=0}^\\infty\\frac{\\sigma^k}{k!}H_k(\\theta).\n",
+    "$$"
    ]
   },
   {
