lecture 5 figures and utitilities added

--- a/lectures/lecture-6.ipynb
+++ b/lectures/lecture-6.ipynb
@@ -87,6 +87,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
+    "import GPy\n",
+    "from ipywidgets import interactive, interact, widgets\n",
+    "import scipy.spatial as SP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -192,7 +206,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "N = 10\n",
