minor to Lecture 8 & ToC

--- a/lectures/lecture-8.ipynb
+++ b/lectures/lecture-8.ipynb
@@ -177,7 +177,7 @@
     "\\begin{aligned}\n",
     "e_{ijk}&=\\frac{i!\\,j!\\,k!}{(s-i)!\\,(s-j)!\\,(s-k)!},\n",
     "\\;\n",
-    "&&s=\\frac{i+j+k}2\\in\\mathcal N, \\,s\\geq i,j,k\\\\\n",
+    "&&s=\\frac{i+j+k}2\\in\\mathbb N, \\,s\\geq i,j,k\\\\\n",
     "e_{ijk}&=0, &&\\text{otherwise}\n",
     "\\end{aligned}\n",
     "\\right.\n",
@@ -306,6 +306,7 @@
     "    cf = solution_coeffs(A, v_0, 1.0)\n",
     "    plt.plot(cf, label='SGm')\n",
     "    plt.legend(loc='upper right')\n",
+    "    plt.xlabel('N')\n",
     "\n",
     "\n",
     "from ipywidgets import interact, widgets"
@@ -323,7 +324,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e28843115817449390c7f78b0055f510",
+       "model_id": "df0fa4c2bbc147989d0f2c0142409ded",
        "version_major": 2,
        "version_minor": 0
       },
@@ -530,7 +531,7 @@
     "k(x,\\xi)=\\hat k_0(x)+\\sum_{i=1}^d\\hat k_i(x)\\xi_i,\n",
     "$$\n",
     "where $\\xi=(\\xi_1,\\,\\xi_2,\\,\\ldots,\\,\\xi_d)$ are i.i.d. r.v.\n",
-    "Some ways of representing a random field as a finite combination of random variables will be considered in the following lectures.\n",
+    "Some ways of representing a random field as a finite combination of random variables you have learned from [Lecture 5](lectures/lecture-5.ipynb) (The Karhunen–Loève expansion).\n",
     "\n",
     "For the problem to be well posed, we require\n",
     "$$\n",
