--- a/table_of_contents.ipynb
+++ b/table_of_contents.ipynb
@@ -26,8 +26,8 @@
     "|:----:|:------------------|:------------------------|:---------|-------|\n",
     "|1|[General info](lectures/lecture-0.ipynb)  <br> [Lecture 1 (Introduction to uncertainty quantification)](lectures/lecture-1.ipynb) <br> [Lecture 2 (UQ propagation using sampling methods)](lectures/lecture-2.ipynb) |&nbsp;| [Homework 1](homeworks/homework_01.ipynb)\n",
     "|2|[Lecture 3 (Variance reduction method)](lectures/lecture-3.ipynb)<BR>[Lecture 4 (Polynomial Chaos methods)](lectures/lecture-4.ipynb) ||\n",
-    "|3|[Lecture 4 (Priors on function spaces. Gaussian Process regression. The Karhunen–Loève expansion)](lectures/lecture-4.ipynb)<BR>[Lecture 5 (Learning hyperparameters for GP. Active Learning)](lectures/lecture-5.ipynb) ||\n",
-    "|4|[Lecture 6 (Bayesian Optimization)](lectures/lecture-6.ipynb), [Lecture 7 (Global and local sensitivity analysis, Sobol' indices, PC-based Sobol' indices)](lectures/lecture-7.ipynb), <BR>[Lecture 8 (Stochastic Galerkin Method. Stochastic Collocation Method)](lectures/lecture-8.ipynb) ||\n",
+    "|3|[Lecture 5 (Priors on function spaces. Gaussian Process regression. The Karhunen–Loève expansion)](lectures/lecture-5.ipynb)<BR>[Lecture 6 (Learning hyperparameters for GP. Active Learning. Bayesian Optimization)](lectures/lecture-6.ipynb) ||\n",
+    "|4|[Lecture 7 (Global and local sensitivity analysis, Sobol' indices, PC-based Sobol' indices)](lectures/lecture-7.ipynb), <BR>[Lecture 8 (Stochastic Galerkin Method. Stochastic Collocation Method)](lectures/lecture-8.ipynb) ||\n",
     "    "
    ]
   }
