minor to Lecture 9

--- a/lectures/lecture-9.ipynb
+++ b/lectures/lecture-9.ipynb
@@ -87,7 +87,8 @@
     "$$\n",
     "defined by\n",
     "$$\n",
-    "F[u](x)=\\int_0^1k(x-y)u(y)\\,dy,\\qquad 0\\leq x\\leq1,\n",
+    "y(x)=\n",
+    "F[u](x)=\\int_0^1k(x-\\tau)u(\\tau)\\,\\text d\\tau,\\qquad 0\\leq x\\leq1,\n",
     "$$\n",
     "here $k$ is Gaussian kernel\n",
     "$$\n",
@@ -96,7 +97,7 @@
     "* The forward problem: Given the source function $u$ and the kernel $k$, determine the blurred image $y$.\n",
     "* The inverse problem: Given the  blurred image $y$ and and kernel $k$, determine the source (original image) function $u$.\n",
     "\n",
-    "The inverse problem is ill-posed."
+    "The inverse problem is **ill-posed**."
    ]
   },
   {
@@ -110,9 +111,9 @@
     "Indeed, consider a small perturbation $\\delta u(x)=\\varepsilon\\sin(2\\pi\\omega x)$.\n",
     "The corresponding perturbation\n",
     "$$\n",
-    "\\delta y(x)\n",
-    "=F(u+\\delta u)\n",
-    "=\\varepsilon\\int_0^1k(x-y)\\sin(2\\pi\\omega y)\\,dy\n",
+    "\\delta y\n",
+    "=F(u+\\delta u)-F(u)\n",
+    "=\\varepsilon\\int_0^1k(x-\\tau)\\sin(2\\pi\\omega \\tau)\\,\\text d\\tau\n",
     "$$\n",
     "tends to zero as $\\omega\\to+\\infty$.\n",
     "Hence, the ratio between $\\delta u$ and $\\delta y$ can be arbitrary large, which means, that stability condition is not satisfied."
@@ -336,7 +337,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1de6fbd2a0f34a4186fbc81c9eea789a",
+       "model_id": "fb4bd3231b8847749dd673b35848d20f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -505,7 +506,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1874bebec554a69a6a2fdb3ca942e0b",
+       "model_id": "f105e191987946e7b9586b5c5802b658",
        "version_major": 2,
        "version_minor": 0
       },
@@ -550,7 +551,7 @@
     "Namely, regularization with Tikhonov filter can be defined as solution of the minimization problem\n",
     "$$\n",
     "u_{\\text{TIK}}=\n",
-    "\\mathop{\\text{arg min}}_u\\frac12\\|F_Nu-y\\|_2^2+\\frac\\alpha2\\|u\\|_2^2,\n",
+    "\\mathop{\\text{arg min}}_u\\left(\\frac12\\|F_Nu-y\\|_2^2+\\frac\\alpha2\\|u\\|_2^2\\right),\n",
     "$$\n",
     "We can find this solution with use of iterative methods.\n",
     "\n",
@@ -644,7 +645,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac78dc15fb2c4bda9a017c2f6ddf2ed8",
+       "model_id": "6c55b97ba2a6434c8e2f5f07e6969f5b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -822,7 +823,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "156a5f43289f42caba76e7805a27174e",
+       "model_id": "f5d5a48a601148258bf5df4d0cf04114",
        "version_major": 2,
        "version_minor": 0
       },
@@ -923,7 +924,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "29964f834a3b42a79632fb4a9a07dd75",
+       "model_id": "8f78c786d6e14a21998df6af135d8d55",
        "version_major": 2,
        "version_minor": 0
       },
