--- a/lectures/lecture-2.ipynb
+++ b/lectures/lecture-2.ipynb
@@ -192,7 +192,7 @@
     "\n",
     "Let $0\\leq f(x)\\leq1$, $x\\in[0,\\,1]$ and we need to find\n",
     "$$\n",
-    "I=\\int_0^1f(x)\\,dx.\n",
+    "I=\\int\\limits_0^1f(x)\\,dx.\n",
     "$$\n",
     "\n",
     "In the Monte-Carlo approach we sample a unit square $[0,\\,1]\\times [0,\\,1]$ with quasi-random points sequence $\\mathcal X = \\{(x_i\\,y_i)\\}_1^N$.\n",
@@ -460,7 +460,7 @@
     "\n",
     "Let the random variable $\\xi$ have a distribution $\\rho$. In this approach we approximately find the mean of the following value\n",
     "$$\n",
-    "\\mathbb E \\left(\\frac f\\rho\\right)=\\int_0^1\\frac{f(x)}{\\rho(x)}\\rho(x)\\,dx\\approx\\frac1N\\sum_{i=1}^N\\frac{f(\\xi_i)}{\\rho(\\xi_i)}\n",
+    "\\mathbb E \\left(\\frac f\\rho\\right)=\\int\\limits_0^1\\frac{f(x)}{\\rho(x)}\\rho(x)\\,dx\\approx\\frac1N\\sum_{i=1}^N\\frac{f(\\xi_i)}{\\rho(\\xi_i)}\n",
     "$$\n",
     "where $\\{\\xi_1,\\,\\xi_2,\\,\\ldots,\\,\\xi_N\\}$ are independent realizations of $\\xi$."
    ]
@@ -974,9 +974,9 @@
     }
    },
    "source": [
-    "One of the **advanteges** of inverse transform sampling is that we can use this method when PDE is not exists, for exmaple, in the case with discrete part of the distribution.\n",
+    "One of the **advantages** of inverse transform sampling is that we can use this method when PDE does not exist, for example, in the case with discrete part of the distribution.\n",
     "\n",
-    "Consider the simplest case, when we have several outcomes $\\{x_1,\\,x_2,\\,\\ldots,\\,x_n\\}$ with the given probabilities $\\{p_1,\\,p_2,\\,\\ldots,\\,p_n\\}$, $\\sum_{i=1}^np_i=1$.\n",
+    "Consider the simplest case, when we have several outcomes $\\{x_1,\\,x_2,\\,\\ldots,\\,x_n\\}$ with the given probabilities $\\{p_1,\\,p_2,\\,\\ldots,\\,p_n\\}$, $\\sum\\limits_{i=1}^np_i=1$.\n",
     "\n",
     "CDF is discontinuous and piecewise constant in this case."
    ]
@@ -1030,7 +1030,7 @@
    "source": [
     "x = np.linspace(-1, 6, 2**11)\n",
     "plt.plot(x, CDF_discrete(x), '.');\n",
-    "plt.ylabel('F(x)')\n",
+    "plt.ylabel('F(x)')in\n",
     "plt.xlabel('x')\n",
     "plt.title('CDF in the discrete case');"
    ]
@@ -1181,21 +1181,21 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "varInspector": {
    "cols": {
