--- a/lectures/lecture-3.ipynb
+++ b/lectures/lecture-3.ipynb
@@ -22,13 +22,13 @@
     "Using usual Monte-Carlo method for estimating the mean value (for example, to find an integral as in Lecture 2),\n",
     "we have the following estimate\n",
     "$$\n",
-    "\\mathbb E_\\rho(f)=\\int_a^bf(x)\\rho(x)\\,\\text{d}x\\approx\\frac1N\\sum_{i=1}^Nf(x_i),\n",
+    "\\mathbb E_\\rho(f)=\\int\\limits_a^bf(x)\\rho(x)\\,\\text{d}x\\approx\\frac1N\\sum\\limits_{i=1}^Nf(x_i),\n",
     "$$\n",
     "where $\\{x_i\\}$ are samples of the random variable $\\xi$ with probability density function $\\rho$.\n",
     "\n",
     "In general, if we estimate the mean by the averaging the samples\n",
     "$$\n",
-    "\\mathbb E(\\xi)\\approx\\hat\\xi_N=\\frac1N\\sum_{i=1}^Nx_i,\n",
+    "\\mathbb E(\\xi)\\approx\\hat\\xi_N=\\frac1N\\sum\\limits_{i=1}^Nx_i,\n",
     "$$\n",
     "then by [central limit theorem](https://en.wikipedia.org/wiki/Central_limit_theorem)\n",
     "we have the estimate for the deviation\n",
@@ -38,7 +38,7 @@
     "$$\n",
     "for any $x>0$, where\n",
     "$$\n",
-    "\\Phi(x)=\\frac2{\\sqrt{2\\pi}}\\int_0^x\\exp(-\\tau^2/2)\\,\\text{d}\\tau.\n",
+    "\\Phi(x)=\\frac2{\\sqrt{2\\pi}}\\int\\limits_0^x\\exp(-\\tau^2/2)\\,\\text{d}\\tau.\n",
     "$$\n",
     "\n",
     "It means, that for the given random variable $\\xi$ the error of the approximation $\\varepsilon$ has the following asymptotic $\\varepsilon\\sim\\frac{\\sqrt{\\text{Var}(\\xi)}}{\\sqrt N}$."
@@ -1222,21 +1222,21 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "varInspector": {
    "cols": {
