--- a/lectures/lecture-4.ipynb
+++ b/lectures/lecture-4.ipynb
@@ -119,7 +119,7 @@
     "$$\n",
     "(This convergence does not imply, of course, pointwise convergence).\n",
     "\n",
-    "The following optimaliti property holds\n",
+    "The following optimality property holds:\n",
     "$$\n",
     "\\|f−\\text{Pr}_N\\,f\\|_{L_2}=\n",
     "\\inf_{g\\in \\mathcal P_N}\\|f−g\\|_{L_2}.\n",
@@ -136,7 +136,7 @@
    "source": [
     "What is the  approximation in a strong sense?\n",
     "\n",
-    "The convergence in the strong norm implies convergence is probability\n",
+    "The convergence in the strong norm implies convergence in probability\n",
     "$$\n",
     "f_N\\mathop{\\to}\\limits^{\\mathbb P} f\n",
     "$$\n",
@@ -156,7 +156,7 @@
     }
    },
    "source": [
-    "Recall, that **convergence is probability**\n",
+    "Recall, that **convergence in probability**\n",
     "means that for all $\\varepsilon>0$\n",
     "$$\n",
     "\\mathbb P(\\left|f_N-f\\right|>\\varepsilon)\\to0,\\qquad N\\to\\infty,\n",
@@ -183,7 +183,7 @@
     }
    },
    "source": [
-    "#### Example (Lognornal r.v.)\n",
+    "#### Example (Lognormal r.v.)\n",
     "\n",
     "Let $\\eta=e^\\xi$,  where $\\xi\\sim\\mathcal N(\\mu, \\sigma)$.\n",
     "\n",
@@ -194,7 +194,7 @@
     "\\rho_\\eta(x)=\\frac1{x\\sigma\\sqrt{2\\pi}}\\exp\\left(-\\frac{(\\ln x-\\mu)^2}{2\\sigma^2}\\right).\n",
     "$$\n",
     "\n",
-    "Let's obtain gPC projcetion of $\\eta$.\n",
+    "Let's obtain gPC projection of $\\eta$.\n",
     "\n",
     "If $\\theta\\sim\\mathcal N(0, 1)$ then\n",
     "$\\xi=\\mu+\\sigma\\theta$\n",
@@ -1204,21 +1204,21 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "varInspector": {
    "cols": {
